# redshift-mcp-server

./: .gitignore  README.md  pyproject.toml
redshift_mcp_server/: __init__.py  __main__.py  models.py  server.py  util.py
tests/: test_models.py  test_server.py  test_util.py
